Alteração de imagens e correção da logo do carrinho

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="w-full h-[420px] bg-home bg-cover bg-center">
         <div class="w-full h-full flex flex-col justify-center items-center ">
             <img 
-            src="./assets/hamb-1.png"
+            src="./assets/5.png"
             alt="Logo Sanduba Lanches"
             class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-200"
             />
@@ -37,23 +37,23 @@
     <h2 class="font-bold mt-9 mb-6 text-center text-2xl md:text-3xl"> Conheça nosso menu</h2>
     <!--Menu-->
    <div id="menu">
-        <main class="grid grid-cols-1 md:grid-cols-2 gap-7 mx-auto max-w-7xl px-2 mb-16">
+        <main class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16">
             <!--Produto Item-->
-            <div class="flex gap-2">
+            <div class="flex gap-2 ">
                 <img
-                src="./assets/hamb-1.png"
+                src="./assets/1.png"
                 alt="Hamburger 1"
                 class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
                 />
-                <div>
-                    <p class="font-bold">Hamburger 1</p>
+                <div class="w-full justify-between">
+                    <p class="font-bold">Hamburger Tradicional</p>
                     <p class="text-sm"> Descrição do produto.</p> 
                     <div class="flex items-center gap-2 mt-3 justify-between"> 
-                        <p> R$ 20.00 </p>
+                        <p> R$ 12.00 </p>
                         <button 
-                            class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Hamburger 1"
-                            data-price="20.00"
+                            class="bg-gray-900 px-5 rounded add-to-cart-btn right-0"
+                            data-name="Hamburger Tradicional"
+                            data-price="12.00"
                         >
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -64,21 +64,44 @@
             </div>
             <!--Fim Produto Item-->
             <!--Produto Item-->
-            <div class="flex gap-2">
+            <div class="flex gap-2 ">
                 <img
-                src="./assets/hamb-2.png"
+                src="./assets/2.png"
                 alt="Hamburger 2"
                 class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
                 />
-                <div>
-                    <p class="font-bold">Hamburger 2</p>
+                <div class="w-full justify-between">
+                    <p class="font-bold">Hamburger X-TUDO</p>
+                    <p class="text-sm"> Descrição do produto .</p> 
+                    <div class="flex items-center gap-2 mt-3 justify-between"> 
+                        <p> R$ 21.00 </p>
+                        <button 
+                            class="bg-gray-900 px-5 rounded add-to-cart-btn "
+                            data-name="X-TUDO"
+                            data-price="21.00"
+                        >
+                            <i class="fa fa-cart-plus text-lg text-white"></i>
+                        </button>
+                    </div>
+                </div>    
+            </div>
+            <!--Fim Produto Item-->
+            <!--Produto Item-->
+            <div class="flex gap-2 " >
+                <img
+                src="./assets/3.png"
+                alt="Hamburger 2"
+                class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+                />
+                <div class="w-full justify-between">
+                    <p class="font-bold">Pastel</p>
                     <p class="text-sm"> Descrição do produto.</p> 
                     <div class="flex items-center gap-2 mt-3 justify-between"> 
-                        <p> R$ 30.00 </p>
+                        <p> R$ 16.00 </p>
                         <button 
-                            class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Hamburger 2"
-                            data-price="30.00"
+                            class="bg-gray-900 px-5 rounded add-to-cart-btn "
+                            data-name="Pastel"
+                            data-price="16.00"
                         >
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -89,42 +112,19 @@
             <!--Produto Item-->
             <div class="flex gap-2">
                 <img
-                src="./assets/hamb-3.png"
-                alt="Hamburger 2"
-                class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
-                />
-                <div>
-                    <p class="font-bold">Hamburger 3</p>
-                    <p class="text-sm"> Descrição do produto.</p> 
-                    <div class="flex items-center gap-2 mt-3 justify-between"> 
-                        <p> R$ 30.00 </p>
-                        <button 
-                            class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Hamburger 3"
-                            data-price="30.00"
-                        >
-                            <i class="fa fa-cart-plus text-lg text-white"></i>
-                        </button>
-                    </div>
-                </div>    
-            </div>
-            <!--Fim Produto Item-->
-            <!--Produto Item-->
-            <div class="flex gap-2">
-                <img
-                src="./assets/hamb-4.png"
+                src="./assets/4.png"
                 alt="Hamburger 4"
                 class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
                 />
-                <div>
-                    <p class="font-bold">Hamburger 4</p>
+                <div class="w-full justify-between">
+                    <p class="font-bold">Espetinho com Fritas</p>
                     <p class="text-sm"> Descrição do produto.</p> 
                     <div class="flex items-center gap-2 mt-3 justify-between"> 
-                        <p> R$ 30.00 </p>
+                        <p> R$ 14.00 </p>
                         <button 
-                            class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Hamburger 4"
-                            data-price="30.00"
+                            class="bg-gray-900 px-5 rounded add-to-cart-btn "
+                            data-name="Espetinho com Fritas"
+                            data-price="14.00"
                         >
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -151,7 +151,7 @@
                 alt="Coca Zero"
                 class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
                 />
-                <div>
+                <div class="w-full justify-between">
                     <p class="font-bold">Coca Zero</p>
                     <p class="text-sm"> Descrição do produto.</p> 
                     <div class="flex items-center gap-2 mt-3 justify-between"> 
